<resources>
    <string name="app_name">Unit Converter</string>
    <string name="title_tip_calc">Tip Calculator</string>
    <string name="menu_settings">Settings</string>

    <string name="bill_amount_label">Bill Amount</string>


    <string name="tip_percent_label">Tip Percent</string>

    <string name="increase">+</string>
    <string name="decrease">-</string>

    <string name="tip_amount_label">Tip</string>
    <string name="tip_amount">0.00</string>

    <string name="total_amount_label">Total</string>
    <string name="total_amount">0.00</string>

    <string name="apply">Apply</string>
</resources>