<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/billAmountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:text="@string/bill_amount_label"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/billAmountEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:ems="6"
                android:textColor="#ffffff"
                android:textSize="22sp">

                <requestFocus />

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:id="@+id/percentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:text="@string/tip_percent_label"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/percentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColor="#ffffff"
                android:text=""
                android:gravity="right"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/percentSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="%"
                android:textSize="22sp" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/percentSeek"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:max="30"
            android:progress="15" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:padding="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tipLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:text="@string/tip_amount_label"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tipTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_amount"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:padding="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/totalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:text="@string/total_amount_label"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_amount"
                android:textSize="22sp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>